# cmd/docs/swagger.json
@@ -342,6 +342,44 @@
                 }
             }
         },
+        "/tracker/reminder": {
+            "get": {
+                "description": "Get reminder for the user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "get reminder endpoint",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/version": {
             "get": {
                 "description": "Get the current version of the API",
@@ -409,10 +447,6 @@
                 },
                 "goal": {
                     "$ref": "#/definitions/habit.Goal"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Drink water"
                 }
             }
         },
